# 00-class

./: .gitignore  CHANGELOG.md  README.md  config.yaml  pyproject.toml
class/: exio3class.xlsx  exio_country_axes.xlsx  region12.csv
scripts/: refresh_country_axes.py
src/exiobase_meta/: __init__.py  classifications.py  cli.py  concordances.py  country_axes.py  country_conversion.py  io.py
src/exiobase_meta/data/class/: exio_country_axes.xlsx
src/exiobase_meta/data/concordances/: EXIOBASE20p_EXIOBASE20i_codes.txt
tests/: test_meta_consistency.py  test_readers.py
