[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "exiobase-meta"
version = "0.1.0"
description = "EXIOBASE classification readers and country conversion utilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Proprietary"}
authors = [{name = "EXIOBASE Team"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "openpyxl>=3.1",
  "xlrd==1.2.0",
  "country_converter>=1.2",
  "io_utils"
]

[project.scripts]
exiobase-meta = "exiobase_meta.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

# Classifications and concordances are NOT bundled inside the package. They
# live at the top level of the repo (``class/``)
# so they are easy for a human to find, and the readers resolve them via
# ``DATA_ROOT`` (see ``exiobase_meta/io.py``). This assumes the editable
# (``pip install -e .``) layout used across the EXIOBASE monorepo; building a
# standalone wheel would need a step to vendor these files back in.
